# s3bmsdashboard

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: api.rs  app.rs  main.rs
