[package]
name = "s3bmsdashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0" }
anyhow = "1.0"
eframe = { version = "0.25.0", features = ["persistence"] }
egui = { version = "0.25.0", features = ["persistence"] }
ureq = "2.9.1"
regex = "1.10.3"
lazy_static = "1.4.0"
